feat: upgrade java version to 23 from 8